[gd_scene load_steps=4 format=3 uid="uid://n4cd5y66kphr"]

[ext_resource type="Script" path="res://furniture.gd" id="1_ta715"]
[ext_resource type="Texture2D" uid="uid://dd1o75oedcu7f" path="res://Sprites/barChair.png" id="2_kk5tf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lne2b"]
size = Vector2(17, 19)

[node name="Furniture" type="Node2D"]
script = ExtResource("1_ta715")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_kk5tf")

[node name="area" type="Area2D" parent="." groups=["furnitureArea"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
shape = SubResource("RectangleShape2D_lne2b")

[node name="landCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 270)

[node name="pullTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
[connection signal="input_event" from="area" to="." method="_on_area_input_event"]
[connection signal="timeout" from="pullTimer" to="." method="_on_pull_timer_timeout"]
